src/test/resources/semantic/custom/accept/arrayAccess.ul
void main() {
}

float foo(int foo) {
    float[5] bar;
    return bar[0];
}
