src/test/resources/semantic/custom/reject/voidArrayReturn.ul
void main() {
}

void[5] foo() {
}
